# system_identification

./: .Dockerfile  .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml  qwerty.py  requirements.txt  setup.py
.devcontainer/: devcontainer.json
assignment/: F16_PlotData.m  F16traindata_CMabV_2017.mat  load_f16data2017.m
config_files/: mypy_config  pycodestyle
notebooks/: 0_state_estimation.ipynb  1_linear_regression.ipynb  1_state_estimation.ipynb  2_linear_regression.ipynb  3_feed_forward.ipynb  3_radial_basis_function.ipynb  4_feed_forward.ipynb  simple_iekf.ipynb  training_logs_2.pickle
notebooks/data/: .gitignore  lm_ols_comparison_log.pickle  lm_ols_comparison_log_bak.pickle
report/: .gitignore  report.aux  report.bib  report.blg  report.out  report.tex  report.toc
report/chapters/: 0_introduction.tex
system_identification/: base_model.py  base_nn.py  ffnn.py  ffnn_original.py  iekf.py  load_assignment_data.py  load_data.py  lsqr_model.py  rbf_batch_trainer.py  rbf_cells_optimization.py  rbfnn.py  rbfnn_model.py
system_identification/ffnn/: __init__.py  ffnn.py  model.py
system_identification/notebooks/: 0_state_estimation.ipynb  1_linear_regression.ipynb  2_rbf.ipynb  3_feed_forward.ipynb  3_feed_forward_exp.ipynb  Untitled.ipynb  assignment_cw_iekf.ipynb  iekf_example.ipynb  simple_iekf.ipynb  (+1 more)
test/: ffnn.ipynb  iekf.ipynb  least_squares.ipynb  lloyds_algorithm.ipynb  rbf.ipynb
work/: 1_state_estimation.ipynb  2_linear_regression.ipynb  3_radial_basis_function.ipynb  3_radial_basis_function_new.ipynb  4_feed_forward.ipynb
(+3 files in other folders)
