[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "system_identification"
version = "0.0.0"
description = "Aaron de Windt's system identification assignment."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
]
dependencies = [
    "jupyter",
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "xarray",
    "sympy",
    "pandas",
    "numba",
    "tabulate",
    "html2text",
    "statsmodels",
    "shapely",
    "markupsafe",
]

[tool.setuptools.packages.find]
where = [""]
include = ["system_identification"]
namespaces = false
